--- a/index.html
+++ b/index.html
@@ -1,32 +1,24 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>stlite app</title>
-        <link
-            rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/@stlite/mountable@0.58.3/build/stlite.css"
-        />
-    </head>
-    <body>
-        <div id="root"></div>
-        <script src="https://cdn.jsdelivr.net/npm/@stlite/mountable@0.58.3/build/stlite.js"></script>
-        <script>
-            stlite.mount(
-              {
-                requirements: ["pandas", "streamlit"],
-                entrypoint: "main.py",
-                files: {
-                  "main.py": `
-                    import streamlit as st
-                    import pandas as pd
-      
-                    st.title('Streamlit example')
-                    `,
-                },
-              },
-              document.getElementById("root")
-            );
-          </script>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <title>stlite app</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@stlite/mountable@0.39.0/build/stlite.css" />
+  </head>
+  <body>
+    <div id="root"></div>
+    <script src="https://cdn.jsdelivr.net/npm/@stlite/mountable@0.39.0/build/stlite.js"></script>
+    <script>
+      stlite.mount(
+        `
+            import streamlit as st
+
+            st.title('Streamlit example')
+        `,
+        document.getElementById("root")
+      );
+    </script>
+  </body>
 </html>
